--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             Aldus PageMaker including versions of Lorem Ipsum
         </div>
 
+        <div>
+            <img src="images/cloud-campus.png" alt="Logo de cloud campus.">
+        </div>
+
     </div>
 </body>
 </html>
