page contact added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="src/about.html">About</a>
                 <a href="#">Blog</a>
                 <a href="#">Portefolio</a>
-                <a href="#">Contact</a>
+                <a href="src/contact.html">Contact</a>
                 <div class="animation start-home"></div>
             </nav>
 
