--- a/src/contact.html
+++ b/src/contact.html
@@ -39,6 +39,12 @@
             border-radius: 5px;
             background-color: #f2f2f2;
             padding: 20px;
+            width: 50%;
+        }
+        body{
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
     </style>
 
